# foodzy

./: README.md
api/: .gitignore  Cargo.toml
api/db-seed/: 01-tables.sql  02-seed.sql
api/src/: app.rs  common.rs  domains.rs  main.rs
api/src/common/: app_state.rs  bootstrap.rs  jwt.rs  multipart_helper.rs
api/src/domains/: category.rs  product.rs  user.rs
api/src/domains/auth/domain/: model.rs
api/src/domains/auth/dto/: auth_dto.rs
api/src/domains/auth/infra/: impl_repository.rs
api/src/domains/category/api/: handlers.rs  routes.rs
api/src/domains/category/domain/: model.rs  repository.rs  service.rs
api/src/domains/category/dto/: category_dto.rs
api/src/domains/category/infra/: impl_repository.rs  impl_service.rs
api/src/domains/product/api/: handlers.rs  routes.rs
api/src/domains/product/domain/: model.rs  repository.rs  service.rs
api/src/domains/product/dto/: product_dto.rs
api/src/domains/product/infra/: impl_repository.rs  impl_service.rs
api/src/domains/user/api/: handlers.rs  routes.rs
api/src/domains/user/domain/: model.rs  service.rs
api/src/domains/user/dto/: user_dto.rs
api/src/domains/user/infra/: impl_repository.rs  impl_service.rs
